# musica-core

./: .travis.yml  Dockerfile
doc/: Doxyfile
src/: CMakeLists.txt  config.F90  domain.F90  domain_iterator.F90  domain_state.F90  domain_state_accessor.F90  domain_state_mutator.F90  emissions.F90  evolving_conditions.F90  grid.F90  initial_conditions.F90  loss.F90
src/domains/: cell.F90  column.F90
src/input_output/: file.F90  file_dimension.F90  file_dimension_factory.F90  file_dimension_range.F90  file_factory.F90  file_paired_variable.F90  file_updater.F90  file_variable.F90  file_variable_factory.F90  input_output_processor.F90
src/input_output/file_dimensions/: netcdf.F90  text.F90
src/input_output/file_variables/: netcdf.F90  text.F90
src/input_output/files/: netcdf.F90  text.F90
src/util/: array.F90  assert.F90  convert.F90  data_type.F90  map.F90  math.F90  property.F90  property_set.F90  string.F90  target.F90
test/: CMakeLists.txt  config.F90
test/data/: test_O2_optics_config.json
test/domains/: cell.F90
test/examples/O2_effective_cross_sections/: O2_optics.F90  README.md  chebyshev.cdl  la_srb_mod.F90  test_grid_example.F90
test/util/: array.F90  convert.F90  datetime.F90  property.F90  property_set.F90  string.F90
